<resources>
    <string name="app_name">yakov777</string>
    <string name="action_settings">Settings</string>
    <string name="highscores">Highscores</string>
    <string name="player1">Player1</string>
    <string name="player2">Player2</string>
    <string name="restart">Restart</string>
    <string name="_0">0</string>
    <string name="about">About</string>
    <string name="bot">Bot</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_username">UserName</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
