<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.kit181.yakov777.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_highscores"
        android:orderInCategory="100"
        android:title="@string/highscores"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_bot"
        android:checkable="true"
        android:checked="false"
        android:orderInCategory="1"
        android:title="@string/bot"
        app:showAsAction="never" />

    
</menu>
